--- a/investors.html
+++ b/investors.html
@@ -3,126 +3,65 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Investor Relations | Omkar Enterprises</title>
+  <title>Omkar Enterprises | Home</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Roboto&display=swap" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
   <!-- Navbar -->
- <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#7198f5;">
-  <div class="container">
-    <a class="navbar-brand d-flex align-items-center" href="index.html">
-      <img src="images/logo.png" alt="Omkar Enterprises" height="40" class="me-2">
-      <span style="font-weight:600; color:#002147; font-size:1.2rem;">Omkar Enterprises</span>
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-        <li class="nav-item"><a class="nav-link" href="compliance.html">Compliance</a></li>
-        <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-        <!-- Contact Us Highlight -->
-        <li class="nav-item">
-          <a class="btn btn-dark text-white ms-2 px-3" href="contact.html">Contact Us</a>
-        </li>
-      </ul>
+  <nav class="navbar navbar-expand-lg" style="background-color:#0261cf;">
+    <div class="container">
+      <a class="navbar-brand d-flex align-items-center" href="index.html">
+        <img src="images/logo.png" alt="Omkar Enterprises" height="40" class="me-2">
+        <span style="font-weight:600; color:#fff; font-size:1.2rem;">Omkar Enterprises</span>
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="services.html">Services</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="compliance.html">Compliance</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="blog.html">Blog</a></li>
+          <li class="nav-item"><a class="btn btn-light ms-2 px-3" href="contact.html">Contact Us</a></li>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
+
   <!-- Hero -->
   <section class="hero text-center">
-    <div class="text-center mt-4">
-  <a href="contact.html" class="btn btn-primary px-4 me-2">Contact Us</a>
-  <a href="investor-relations.html" class="btn btn-outline-secondary px-4">Investor Relations</a>
-</div>
-
-
-  <!-- Aggregate Performance Chart -->
-  <section class="container my-5">
-    <h2 class="text-center mb-4">Aggregate Past Performance</h2>
-    <canvas id="performanceChart" height="120"></canvas>
-    <p class="text-muted text-center disclaimer mt-3">
-      Chart shown is for aggregate educational purposes only. Past performance does not guarantee future returns. All activities are MOA-compliant.
-    </p>
+    <div class="container">
+      <h1>Welcome to Omkar Enterprises</h1>
+      <p>Building sustainable, compliant, and transparent growth under the framework of Indian corporate laws.</p>
+      <a href="about.html" class="btn btn-primary btn-lg">Know More About Us</a>
+      <a href="contact.html" class="btn btn-outline-light btn-lg">Contact Us</a>
+    </div>
   </section>
 
-  <!-- Investor Trust Section -->
+  <!-- Highlights -->
   <section class="container my-5">
-    <h2 class="text-center mb-4">Investor Trust at a Glance</h2>
     <div class="row text-center">
       <div class="col-md-4">
         <div class="section-card">
-          <h4>Total Investors</h4>
-          <p>150+ active investors in the last cycle</p>
+          <h4>Our Mission</h4>
+          <p>To create value for stakeholders while adhering strictly to the Companies Act, 2013 and MOA-approved objectives.</p>
         </div>
       </div>
       <div class="col-md-4">
         <div class="section-card">
-          <h4>Capital Managed</h4>
-          <p>₹5 Cr+ handled with full compliance</p>
+          <h4>Our Services</h4>
+          <p>Business consultancy, corporate advisory, and compliance management solutions.</p>
         </div>
       </div>
       <div class="col-md-4">
         <div class="section-card">
-          <h4>Reinvestment Rate</h4>
-          <p>70%+ investors reinvested second cycle</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Private Investor Portal Placeholder -->
-  <section class="container my-5 text-center">
-    <h2>Private Investor Portal</h2>
-    <p>Registered investors can securely log in to access personalized reports and agreements.</p>
-    <a href="#" class="btn btn-primary">Login (Coming Soon)</a>
-    <p class="text-muted disclaimer mt-2">Access restricted to verified investors only.</p>
-  </section>
-
-  <!-- FAQ -->
-  <section class="container my-5">
-    <h2 class="text-center mb-4">Frequently Asked Questions</h2>
-    <div class="accordion" id="faqAccordion">
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="faq1">
-          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1">
-            How do payouts work?
-          </button>
-        </h2>
-        <div id="collapse1" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion">
-          <div class="accordion-body">
-            Payouts are scheduled as per the agreement (monthly, quarterly, or annual), strictly documented and compliant with the Companies Act.
-          </div>
-        </div>
-      </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="faq2">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2">
-            Is my investment safe?
-          </button>
-        </h2>
-        <div id="collapse2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
-          <div class="accordion-body">
-            While all investments carry risk, Omkar Enterprises mitigates through diversification, reserve management, and compliance.
-          </div>
-        </div>
-      </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="faq3">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3">
-            Can I exit early?
-          </button>
-        </h2>
-        <div id="collapse3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
-          <div class="accordion-body">
-            Exit options are governed by the agreement. Early exits may involve notice periods or adjustments.
-          </div>
+          <h4>Investor Relations</h4>
+          <p>Transparent communication, structured reporting, and ethical business practices.</p>
         </div>
       </div>
     </div>
@@ -138,34 +77,13 @@
       <a href="#">Twitter</a> | 
       <a href="#">YouTube</a>
     </p>
+    <p class="disclaimer">
+      Disclaimer: Omkar Enterprises does not solicit public deposits or advertise schemes promising fixed or guaranteed returns. 
+      All engagements are private, agreement-based, and fully compliant with the Companies Act, 2013 and applicable laws.
+    </p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="js/script.js"></script>
-
-  <script>
-    // Chart.js Example
-    const ctx = document.getElementById('performanceChart').getContext('2d');
-    const performanceChart = new Chart(ctx, {
-      type: 'line',
-      data: {
-        labels: ['2019', '2020', '2021', '2022', '2023'],
-        datasets: [{
-          label: 'Aggregate Returns (%)',
-          data: [8, 12, 10, 15, 14],
-          borderColor: '#007bff',
-          backgroundColor: 'rgba(0, 123, 255, 0.2)',
-          fill: true,
-          tension: 0.3
-        }]
-      },
-      options: {
-        responsive: true,
-        plugins: {
-          legend: { position: 'bottom' }
-        }
-      }
-    });
-  </script>
 </body>
 </html>
